@@ -1816,6 +1816,10 @@ static void display_new_pickup(const object *op) {
                          "%d FLESH",
                          i&PU_FLESH ? 1 : 0);
 
+    draw_ext_info_format(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_INFO,
+                         "%d CONTAINER",
+                         i&PU_CONTAINER ? 1 : 0);
+
     draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_INFO,
                   "");
 }
@@ -1837,13 +1841,13 @@ void command_pickup(object *op, const char *params) {
         "armour", "boots", "gloves", "cloak", "key",
         "missile", "melee", "magical", "potion", "spellbook",
         "skillscroll", "readables", "magicdevice", "notcursed", "jewels",
-        "flesh", NULL
+        "flesh", "container", NULL
     };
     static const uint32 modes[] = {
         PU_DEBUG, PU_INHIBIT, PU_STOP, PU_FOOD, PU_DRINK, PU_VALUABLES, PU_BOW, PU_ARROW, PU_HELMET,
         PU_SHIELD, PU_ARMOUR, PU_BOOTS, PU_GLOVES, PU_CLOAK, PU_KEY, PU_MISSILEWEAPON, PU_MELEEWEAPON,
         PU_MAGICAL, PU_POTION, PU_SPELLBOOK, PU_SKILLSCROLL, PU_READABLES, PU_MAGIC_DEVICE,
-        PU_NOT_CURSED, PU_JEWELS, PU_FLESH, 0
+        PU_NOT_CURSED, PU_JEWELS, PU_FLESH, PU_CONTAINER, 0
     };
 
     if (*params == '\0') {
