@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+New pickup type, 'container'.
+Partial fix for bug #3075860: Auto-pickup fails to pickup certain items.
+Nicolas Weeger 2010-10-02
+
 Use 'magic devices' for weapon and armour improvers during pickup.
 Partial fix for bug #3075860: Auto-pickup fails to pickup certain items.
 Nicolas Weeger 2010-10-02
